# Bachelor_Project

./: .gitattributes  .gitignore  README.md  Sim2D.cu  data.csv  dispersion.csv  dispersion_log.txt  imgui.ini
Document/: Xuanlin_Chen_plan.aux  Xuanlin_Chen_plan.tex  plan.tex
code/: CMakeLists.txt  dispersion.csv  dispersion_log.txt
code/shaders/: boat.frag  boat.vert  dam_solid.frag  dam_solid.vert  dam_water.frag  dam_water.vert  shadow_depth_boat.vert  shadow_depth_terrain.vert  skybox.frag  skybox.vert  terrain.frag  terrain.vert  water_surface.frag  water_surface.vert
code/shaders/simship_ocean/: createdisplacement.comp  creategradients.comp  fourier_fft.comp  ocean.frag  ocean.vert  water_surface_fft.frag
code/src/: airy_cuda_kernels.cu  airy_fftw.cpp  airy_fftw.h  boat.cpp  boat.h  dam.cpp  dem_129_utm.asc  jw_pipeline.cpp  jw_pipeline.h  jw_transport.cpp  jw_transport.h  jw_transport_gpu.cu  jw_transport_gpu.hpp  main.cpp  pipeline.cpp  pressure_solver.cpp  pressure_solver.h  shader_file.cpp  shader_file.h  shallow_water_solver.cpp  shallow_water_solver.h  shallow_water_solver_gpu.cu  terrain_loader.cpp  terrain_loader.h  transport.cpp  transport_gpu.cu  transport_gpu.hpp  wave_decompose_gpu.cu  wavedecomposer.cpp  wavedecomposer.h
code/src/render/: big_surface.cpp  big_surface.h  boat.cpp  boat.h  caustic_texture.h  clipmap_grid.cpp  clipmap_grid.h  dam.cpp  env_cubemap.cpp  env_cubemap.h  glfw_gl_window.cpp  glfw_gl_window.h  imgui_gl3_glad.cpp  main.cpp  mesh_bvh.cpp  mesh_bvh.h  obj_mesh.cpp  obj_mesh.h  path_join.h  scene_camera.cpp  scene_camera.h  shader_file.cpp  shader_file.h  skybox.cpp  skybox.h  terrain_material.cpp  terrain_material.h  texture_srgb.cpp  texture_srgb.h
code/src/solver_pipeline/: airy_cuda_kernels.cu  airy_cuda_kernels.hpp  airy_fftw.cpp  airy_fftw.h  gpu_terrain_h2d_cache.cpp  gpu_terrain_h2d_cache.hpp  pipeline.cpp  pipeline.h  pipeline_coupled_gpu.cu  pipeline_coupled_gpu.hpp  shallow_water_solver.cpp  shallow_water_solver.h  shallow_water_solver_gpu.cu  transport.cpp  transport.h  transport_gpu.cu  transport_gpu.hpp  wave_decompose_gpu.cu  wave_decompose_gpu.hpp  wavedecomposer.cpp  wavedecomposer.h
code/tools/: compare.py  diffusion_dispersion_bench.cpp  fenge.py  generate_coastal_heightmap.py  plot_diffusion_dispersion.py  terrain_coastal.meta.txt  terrain_coastal.raw  terrain_flat.meta.txt  wave_decompose_long_wave_decay.csv
code/tools/uss-wisconsin-wows/: Wisconsin.mtl
scripts/.mplconfig/: fontlist-v390.json
